# object-simulator

./: :w  Cargo.toml  readme.md
assets/: Triball-v1.glb  Triball-v5.glb  TriballCustom-V3.glb  TriballCustom-v2.glb  TriballLowPoly.glb  TriballLowPolyV-2.glb  ui.ess
src/: constants.rs  field.rs  light.rs  main.rs  maths.rs  movement.rs  robot.rs  ui.rs  visibility.rs
src/bevy_third_person_camera/: gamepad.rs  mod.rs  mouse.rs
src/disc/: mod.rs  systems.rs
src/movement/: mod.rs  systems.rs
src/object/: mod.rs  systems.rs
