[package]
name = "object-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_flycam = "0.10.1"
bevy_rapier3d = "0.21.0"
belly = {git = "https://github.com/jkb0o/belly.git"}
